Added support for instrumentation test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
 
 script:
   - ./gradlew test
-  - ./gradlew jacocoTestReport
+  - ./gradlew jacoocoTestReport
+  - ./gradlew connectedCheck
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
