--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
+    - sys-img-armeabi-v7a-android-21
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -19,10 +20,17 @@ android:
 before_install:
   - yes | sdkmanager "platforms;android-29"
 
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
+  - android list target
   - ./gradlew test
-  - ./gradlew jacoocoTestReport
-  - ./gradlew connectedCheck
+  - ./gradlew connectedDebugAndroidTest
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
