--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
-    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-22
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -22,6 +22,7 @@ before_install:
 
 # Emulator Management: Create, Start and Wait
 before_script:
+  - android list target
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
