--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+dist: trusty
 
 android:
 
@@ -11,6 +12,7 @@ android:
     - extra-android-m2repository
     - extra-google-google_play_services
     - sys-img-armeabi-v7a-android-22
+    - sys-img-x86-android-26
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -23,7 +25,7 @@ before_install:
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list target
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
