--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,23 @@
 language: android
 dist: trusty
 
+env:
+  global:
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+
 android:
 
   components:
     - tools
     - platform-tools
-    - build-tools-29.0.0
-    - android-29
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
-    - sys-img-armeabi-v7a-android-22
-    - sys-img-x86-android-26
+    - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
+    - sys-img-x86-android-$ANDROID_API_LEVEL
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -20,12 +25,13 @@ android:
     - 'google-gdk-license-.+'
 
 before_install:
-  - yes | sdkmanager "platforms;android-29"
+  - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
 
 # Emulator Management: Create, Start and Wait
 before_script:
   - android list target
-  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a -c 100M
+  - android list sdk --extended --no-ui --all
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
