--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: android
 dist: trusty
+jdk: oraclejdk8
 
 env:
   global:
     - ANDROID_API_LEVEL=28
+    - EMULATOR_API_LEVEL=21
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
 
@@ -14,11 +16,12 @@ android:
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
-    - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
-    - sys-img-x86-android-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -34,7 +37,7 @@ before_install:
 before_script:
   - android list target
   - android list sdk --extended --no-ui --all
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi google_apis/armeabi-v7a -c 100M
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi "google_apis/armeabi-v7a" -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
