--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=21
+    - EMULATOR_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
 
@@ -33,11 +33,10 @@ before_install:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
   - yes | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
 
-# Emulator Management: Create, Start and Wait
 before_script:
   - android list target
   - android list sdk --extended --no-ui --all
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi "google_apis/armeabi-v7a" -c 100M
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
