--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ env:
     - ANDROID_API_LEVEL=28
     - EMULATOR_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=armeabi-v7a
 
 android:
 
@@ -20,8 +19,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+    - sys-img-x86-android-$EMULATOR_API_LEVEL
 
   licenses:
     - 'android-sdk-preview-license-.+'
