Fiddling with travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ before_install:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
   - yes | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
   #- yes | sdkmanager tools
-  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;default;armeabi-v7a"
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;default;armeabi-v7a"
+  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
 
 before_script:
