--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=25
+    - EMULATOR_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ADB_INSTALL_TIMEOUT=5
 
 android:
 
@@ -31,9 +32,9 @@ before_install:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
   - yes | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
   - yes | sdkmanager tools
-  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
+  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;x86_64"
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;x86_64"
+  - $ANDROID_HOME/emulator/emulator -avd test -no-window &
 
 before_script:
   - android-wait-for-emulator
