--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=28
+    - EMULATOR_API_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ADB_INSTALL_TIMEOUT=5
 
@@ -20,7 +20,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - extra-google-google_play_services
-    - sys-img-x86-android-$EMULATOR_API_LEVEL
+    - sys-img-armeabi-v7a-android-17
 
   licenses:
     - 'android-sdk-preview-license-.+'
@@ -32,8 +32,8 @@ before_install:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
   - yes | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
   - yes | sdkmanager tools
-  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;x86_64"
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;x86_64"
+  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
+  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
   - $ANDROID_HOME/emulator/emulator -avd test -no-window &
 
 before_script:
