--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,25 @@
 language: android
-dist: trusty
 jdk: oraclejdk8
 
-env:
-  global:
-    - ANDROID_API_LEVEL=28
-    - EMULATOR_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ADB_INSTALL_TIMEOUT=10
-
 android:
-
   components:
-    - tools
-    - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - android-$EMULATOR_API_LEVEL
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - extra-google-google_play_services
-    - sys-img-armeabi-v7a-android-17
-
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
-before_install:
-  - touch $HOME/.android/repositories.cfg
-  - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
-  - yes | sdkmanager "build-tools;$ANDROID_BUILD_TOOLS_VERSION"
-  - yes | sdkmanager tools
-  - yes | sdkmanager "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-$EMULATOR_API_LEVEL;google_apis;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-window &
+  - tools
+  - tools
+  - platform-tools
+  - build-tools-28.0.2
+  - android-28
+  - android-25
+  - extra-google-google_play_services
+  - extra-android-m2repository
+  - extra-android-support
+  - extra-google-m2repository
+  - sys-img-armeabi-v7a-android-25
 
 before_script:
-  - android-wait-for-emulator
-  - adb shell input keyevent 82
-
+- echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+- emulator -avd test -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 script:
   - android list target
   - ./gradlew test
