--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,43 @@
 language: android
 jdk: oraclejdk8
 
+env:
+  global:
+    - EMULATOR_API_LEVEL=25
+    - ADB_INSTALL_TIMEOUT=10
+
 android:
+
   components:
   - tools
   - tools
   - platform-tools
   - build-tools-28.0.2
   - android-28
-  - android-25
+  - android-$EMULATOR_API_LEVEL
   - extra-google-google_play_services
   - extra-android-m2repository
   - extra-android-support
   - extra-google-m2repository
-  - sys-img-armeabi-v7a-android-25
+  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
 
 before_script:
-- echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
-- emulator -avd test -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 &
-script:
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - adb devices
   - android list target
-  - ./gradlew test
-  - ./gradlew connectedDebugAndroidTest
+
+script:
+  - ./gradlew test -PdisablePreDex --stacktrace
+  - ./gradlew connectedDebugAndroidTest -PdisablePreDex --stacktrace
+
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
+
+before_install:
+  - pip install --user codecov
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - codecov
