--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,23 @@ env:
 android:
 
   components:
-  - tools
-  - tools
-  - platform-tools
-  - build-tools-28.0.2
-  - android-28
-  - android-$EMULATOR_API_LEVEL
-  - extra-google-google_play_services
-  - extra-android-m2repository
-  - extra-android-support
-  - extra-google-m2repository
-  - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
+    - tools
+    - tools
+    - platform-tools
+    - build-tools-28.0.2
+    - android-28
+    - android-$EMULATOR_API_LEVEL
+    - extra-google-google_play_services
+    - extra-android-m2repository
+    - extra-android-support
+    - extra-google-m2repository
+    - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
 
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+    
 before_script:
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
   - emulator -avd test -no-window &
