--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk: oraclejdk8
 
 env:
   global:
+    - ANDROID_BUILD_TOOLS=29.0.0
+    - ANDROID_API_LEVEL=29
     - EMULATOR_API_LEVEL=24
     - ADB_INSTALL_TIMEOUT=10
 
@@ -12,8 +14,8 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-28.0.2
-    - android-28
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API_LEVEL
     - android-$EMULATOR_API_LEVEL
     - extra-google-google_play_services
     - extra-android-m2repository
@@ -25,7 +27,7 @@ android:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
-    
+
 before_script:
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
   - emulator -avd test -no-window &
