--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        classpath 'org.jacoco:org.jacoco.core:0.8.4'
     }
 }
 
@@ -18,7 +17,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
