--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ before_script:
 script:
   - ./gradlew test -PdisablePreDex --stacktrace
   - ./gradlew connectedDebugAndroidTest -PdisablePreDex --stacktrace
+  - ./gradlew jacocoTestReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
