--- a/rxkeystore/build.gradle
+++ b/rxkeystore/build.gradle
@@ -39,12 +39,14 @@ android {
 }
 
 dependencies {
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.5'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'org.bouncycastle:bcpkix-jdk15on:1.56'
 }
 
 jacoco {
