--- a/rxkeystore/build.gradle
+++ b/rxkeystore/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC9"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.56'
 
