--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ android:
 
   components:
     - tools
-    - tools
+    - tools # Running this twice get's the latest build tools
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS
     - android-$ANDROID_API_LEVEL
@@ -27,6 +27,9 @@ android:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+
+before_install:
+  - yes | sdkmanager --licenses
 
 before_script:
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
