Used environment variables for build tools and Android API versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ android:
     - 'google-gdk-license-.+'
 
 before_install:
-  - yes | sdkmanager "build-tools;29.0.2"
-  - yes | sdkmanager "platforms;android-30"
+  - yes | sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}"
+  - yes | sdkmanager "platforms;android-${ANDROID_API_LEVEL}"
 
 before_script:
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
