--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,15 @@ env:
     - EMULATOR_API_LEVEL=24
     - ADB_INSTALL_TIMEOUT=15
 
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:
+    - $HOME/.gradle/daemon      # Cache daemon logs
+    - $HOME/.gradle/native      # Cache library downloaded from the gradle dependency
+    - $HOME/.gradle/wrapper     # Cache the gradle
+
 android:
 
   components:
@@ -34,15 +43,15 @@ before_install:
 
 before_script:
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
-  - emulator -avd test -no-window &
+  - emulator -avd test -no-skin -no-audio -no-window -gpu off &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   - adb devices
   - android list target
 
 script:
-  - travis_wait ./gradlew test -PdisablePreDex --stacktrace
-  - travis_wait ./gradlew connectedDebugAndroidTest -PdisablePreDex --stacktrace
+  - travis_wait 15 ./gradlew rxkeystore:testDebugUnitTest -PdisablePreDex --stacktrace
+  - travis_wait 30 ./gradlew rxkeystore:connectedDebugAndroidTest -PdisablePreDex --stacktrace
   - ./gradlew jacocoTestReport
 
 after_success:
